--- a/style.css
+++ b/style.css
@@ -1,3 +1,66 @@
-p {
-    color: green;
+body{
+  background-color: lightslategrey;
+}
+
+.wrapper {
+    display: flex;
+    max-width: 960px;
+    max-height: 700px;
+    margin: auto;
+    justify-content: center;
+    padding-top: 100px;
   }
+
+ .side {
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   width: 70px;
+   height: 500px;
+   background-color: skyblue;
+ 
+}
+
+#picture{
+  width: 800px;
+  height: 500px;
+}
+
+.gray-container{
+  position: absolute;
+  margin-top: 386px;
+  width: 800px;
+  color:white;
+  background: rgba(0, 0, 0, 0.5);
+  opacity: 1;
+}
+
+.thumbnails_container{
+    max-width: 800px;
+    max-height: 300px;
+    margin-top: 20px;
+    display: flex;
+    margin-left: 550px;
+    justify-content: space-between;
+    
+  }
+
+.thumbnail{
+  width: 200px;
+  height: 100px;
+}
+
+.thumbnail_image{
+  height: 100%;
+  width:100%;
+  
+  box-shadow: 0px 0px 10px 3px grey;
+}
+
+
+
+
+
+
+  
+  
